[tool.poetry]
name = "patchwork"
version = "0.1.0"
description = "Implementation of Patchwork board game with AI"
authors = ["Carlo Coppetti <carlo.coppetti@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.20,<2.0"
pandas = "^2.0.0"
gymnasium = ">=0.28.1,<0.30"
pyyaml = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"